--- a/src/index.css
+++ b/src/index.css
@@ -23,15 +23,14 @@ body {
   background: var(--dark);
   color: var(--light);
   font-family: 'Share Tech Mono', monospace;
-  /* font-family: 'Roboto Slab', serif; */
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: center; */
   height: 100vh;
   width: 100%;
   margin: 0;
-  overflow: hidden;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .app-container {
